[package]
name = "kuberhealthy-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "kuberhealthy_client"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "=0.11.22", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
